feat(api-gateway): swagger bearer auth
