# services/api-gateway/docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/articles/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates an article",
                 "consumes": [
                     "application/json"
@@ -55,6 +60,11 @@
         },
         "/articles/delete": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes article by ID",
                 "produces": [
                     "application/json"
@@ -176,6 +186,11 @@
         },
         "/articles/update": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates article by ID",
                 "consumes": [
                     "application/json"
@@ -232,14 +247,14 @@
                 "summary": "Method to login",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Username",
                         "name": "username",
                         "in": "query",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "User password",
                         "name": "password",
                         "in": "query",
@@ -277,14 +292,14 @@
                 "summary": "Method to register",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Username",
                         "name": "username",
                         "in": "query",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "User password",
                         "name": "password",
                         "in": "query",
@@ -556,6 +571,13 @@
                     "example": "How to ..."
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
